# MCP-based-personalized-agent

./: .env  Dockerfile  config.py  context_manager.py  database.py  docker-compose.yml  faiss_index.py  job_fetcher.py  main.py  model.py  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
frontend/: Dockerfile.frontend  streamlit_app.py
