[tool.poetry]
name = "mcp-based-personalized-agent"
version = "0.1.0"
description = "A personalized AI-driven recommendation agent using FastAPI, BERT, and FAISS."
authors = ["Harsh Singh <harshsinghop3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # Adjust based on your compatibility
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.32.0"
pydantic = "^2.5.2"
transformers = "^4.38.2"
torch = "^2.2.0"
faiss-cpu = "^1.7.4"
pymongo = "^4.6.1"
requests = "^2.31.0"
httpx = "^0.27.0"
pillow = "^10.2.0"
tokenizers = "^0.15.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.3.2"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
